Ignore paper folder and update project files

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -10,8 +10,10 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file into the container
-# Since we don't have a requirements.txt yet, we'll install directly or create one
-RUN pip install --no-cache-dir fastapi uvicorn numpy matplotlib torch gymnasium
+COPY requirements.txt .
+
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code into the container
 COPY . .
