--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,7 +1,5 @@
-# Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
-# Set the working directory in the container
 WORKDIR /app
 
 # Install system dependencies
@@ -9,20 +7,18 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy the requirements file into the container
+# Copy requirements and install
 COPY requirements.txt .
-
-# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code into the container
+# Copy the rest of the code
 COPY . .
 
-# Set environment variable for Python path
+# Set PYTHONPATH to include the current directory for module imports
 ENV PYTHONPATH=/app
 
-# Expose the port the app runs on
+# Expose the API port
 EXPOSE 8000
 
-# Command to run the application
+# Start the FastAPI server
 CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
