--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,28 +1,23 @@
 # Stage 1: Build the React application
-FROM node:20-slim AS build
+FROM node:20-alpine AS build
 
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY frontend/package*.json ./
-
-# Install dependencies
+# Copy package.json and lockfile if it exists
+COPY frontend/package.json ./
 RUN npm install
 
-# Copy the rest of the frontend code
+# Copy the rest of the frontend code and build
 COPY frontend/ .
-
-# Build the application
 RUN npm run build
 
 # Stage 2: Serve the application with Nginx
 FROM nginx:alpine
 
-# Copy the build output to Nginx's html directory
+# Copy the built assets from the previous stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Expose port 80
-EXPOSE 80
+# Copy a custom nginx config if needed, or use default
+# EXPOSE 80
 
-# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
