--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   backend:
     build:
@@ -7,12 +9,14 @@ services:
       - "8000:8000"
     environment:
       - PYTHONPATH=/app
+    restart: unless-stopped
 
   frontend:
     build:
       context: .
       dockerfile: Dockerfile.frontend
     ports:
-      - "80:80"
+      - "5173:80"
     depends_on:
       - backend
+    restart: unless-stopped
